Correction Chp2 until the first plot in the chapter, May 15 2017

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -216,3 +216,11 @@
   author={Casella, George},
   year={2008}
 }
+
+
+@article{adlergeometry,
+  title={The geometry of random fields. 1981},
+  author={Adler, Robert J},
+  journal={John Wiley\&Sons, Chichester}
+}
+
