started Chapter 4, May 17 2017

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -224,3 +224,11 @@
   journal={John Wiley\&Sons, Chichester}
 }
 
+
+@misc{seinfeld1998atmospheric,
+  title={Atmospheric chemistry and physics: from air pollution to climate change},
+  author={Seinfeld, John H and Pandis, Spyros N and Noone, Kevin},
+  year={1998},
+  publisher={AIP}
+}
+
